[package]
name = "la_dfa_2_dot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.1", features = ["derive", "cargo"] }
env_logger = "0.10.0"
parol_runtime = { version = "0.18.0", features = ["auto_generation"] }
regex = "1.8.4"
tera = "1.19.0"
thiserror = "1.0"

[build-dependencies]
parol = "0.23.1"
parol_runtime = { version = "0.18.0", features = ["auto_generation"] }

# For faster builds.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
